--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/foundation-sites"]
 	path = third_party/foundation-sites
 	url = https://github.com/foundation/foundation-sites.git
+[submodule "third_party/motion-ui"]
+	path = third_party/motion-ui
+	url = https://github.com/foundation/motion-ui.git
