--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,25 @@ jobs:
   build:
     name: Build ubuntu
     runs-on: ubuntu-20.04
+
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: haskell/actions/setup@v1.2
+#        with:
+#          ghc-version: ${{ matrix.ghc }}
+#          cabal-version: ${{ matrix.cabal }}
+#      - run: cabal v2-update
+      #- run: cabal v2-freeze $CONFIG
+#      - uses: actions/cache@v2
+#        with:
+#          path: |
+#            ~/.cabal/store
+#            dist-newstyle
+#          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
+#          restore-keys: |
+#            ${{ runner.os }}-${{ matrix.ghc }}-
+#      - run: cabal exec 
+
     steps:
       - uses: actions/checkout@v2
         with:
